0.06
 - Add check for 'width' parameter if it's CSS unit.
 - Add check for text translations. Move error from process() to constructor.
 - Add checking of language.
 - Add description to doc.
 - Fix doc typos.
 - Fix output in example.
 - Improve test of rich constructor.
 - Regen output image of plack app example.
 - Remove Tags::Output::Raw and CSS::Struct::Output::Raw from tests.
 - Sort methods in SYNOPSIS section in doc.

0.05 2024-03-08T09:38:04+01:00
 - Add tests for process_css().
 - Fix minimal dependency for Tags::HTML to 0.08 (thanks Andreas J. König,
   GH#1).

0.04 2024-02-27T22:03:30+01:00
 - Add tests for prepare().
 - Add tests for process().
 - Fix error message.
 - Remove obsolete module usage from doc example.

0.03 2024-02-26T11:03:48+01:00
 - Add error to init() and prepare() without data.
 - Add missing cleanup() method to doc.
 - Add tests for cleanup() and init().
 - Fix link to image in doc.

0.02 2024-02-08T22:35:31+01:00
 - Fix label.
 - Regen example.

0.01 2024-02-07T21:01:43+01:00
 - First version.