@@ -9,6 +9,7 @@
  - Regen output image of plack app example.
  - Remove Tags::Output::Raw and CSS::Struct::Output::Raw from tests.
  - Sort methods in SYNOPSIS section in doc.
+ - Use Test::MockObject in tests for bad instances.
 
 0.05 2024-03-08T09:38:04+01:00
  - Add tests for process_css().
